...
  String get name {
    if (displayName != null && displayName!.isNotEmpty) return displayName!;
    final t = type;
    if (t == null) return id;
    switch (t) {
      case SandwichType.veggieDelight:
        return 'Veggie Delight';
      case SandwichType.chickenTeriyaki:
        return 'Chicken Teriyaki';
      case SandwichType.tunaMelt:
        return 'Tuna Melt';
      case SandwichType.meatballMarinara:
        return 'Meatball Marinara';
    }
  }
...
